--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "tweetnacl": "^1.0.3"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.11",
     "@types/node": "^20.10.0",
     "@types/react": "^18.2.42",
     "@types/react-dom": "^18.2.17",
